--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1062,16 +1062,168 @@ a {
     left: -1rem;
   }
 }
-.cid-sObdPdVLPb {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+.cid-sNKCVb8BeY {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
   background-color: #ffffff;
 }
-.cid-sObdPdVLPb .mbr-section-title {
+.cid-sNKCVb8BeY .row {
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .cid-sNKCVb8BeY .image-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sNKCVb8BeY .text-wrapper {
+    padding: 0 2rem;
+  }
+}
+.cid-sNKCVb8BeY .mbr-section-title {
+  color: #d81b23;
+  text-align: left;
+}
+.cid-sNKCVb8BeY .mbr-text,
+.cid-sNKCVb8BeY .mbr-section-btn {
+  text-align: left;
+}
+.cid-sKlU4Rr0y6 {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sKlU4Rr0y6 blockquote {
+  border-color: #ffffff;
+  border-radius: 4px;
+  background-color: #ffffff;
+}
+.cid-sKlU4Rr0y6 .mbr-section-title {
+  color: #d81b23;
+  text-align: left;
+}
+.cid-sKlU4Rr0y6 .mbr-text {
+  text-align: left;
+}
+.cid-sKlGTnIEzm {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-image: url("../../../assets/images/bg-sec5.jpg");
+}
+.cid-sKlGTnIEzm .mbr-section-title {
+  color: #d81b23;
   text-align: center;
 }
-.cid-sObdPdVLPb .mbr-section-subtitle {
+.cid-sKlGTnIEzm .card-title,
+.cid-sKlGTnIEzm .card-box {
+  color: #d81b23;
   text-align: left;
+}
+.cid-sKlGTnIEzm .mbr-text,
+.cid-sKlGTnIEzm .link {
+  color: #000000;
+  text-align: left;
+}
+.cid-sKlGTnIEzm .mbr-section-title DIV {
+  text-align: center;
+}
+.cid-sKlGTnIEzm .mbr-section-subtitle {
+  text-align: left;
+  color: #000000;
+}
+.cid-sKlHqLqzFY {
+  padding-top: 0rem;
+  padding-bottom: 0rem;
+  background-image: url("../../../assets/images/bg-sec1-1.jpg");
+}
+.cid-sKlHqLqzFY .card-title,
+.cid-sKlHqLqzFY .card-box {
+  text-align: left;
+  color: #d81b23;
+}
+.cid-sKlHqLqzFY .mbr-text,
+.cid-sKlHqLqzFY .link {
+  color: #000000;
+}
+.cid-sNKAhcIZpv {
+  padding-top: 2rem;
+  padding-bottom: 1rem;
+  background-color: #ffffff;
+}
+.cid-sNKAhcIZpv img,
+.cid-sNKAhcIZpv .item-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.cid-sNKAhcIZpv .item:focus,
+.cid-sNKAhcIZpv span:focus {
+  outline: none;
+}
+.cid-sNKAhcIZpv .item {
+  cursor: pointer;
+  margin-bottom: 2rem;
+}
+.cid-sNKAhcIZpv .item-wrapper {
+  position: relative;
+  border-radius: 4px;
+  background: #fafafa;
+  height: 100%;
+  display: flex;
+  flex-flow: column nowrap;
+}
+@media (min-width: 992px) {
+  .cid-sNKAhcIZpv .item-wrapper .item-content {
+    padding: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-sNKAhcIZpv .item-wrapper .item-content {
+    padding: 1rem;
+  }
+}
+.cid-sNKAhcIZpv .mbr-section-btn {
+  margin-top: auto !important;
+}
+.cid-sNKAhcIZpv .mbr-section-title {
+  color: #d81b23;
+}
+.cid-sNKAhcIZpv .mbr-text,
+.cid-sNKAhcIZpv .mbr-section-btn {
+  text-align: left;
+}
+.cid-sNKAhcIZpv .item-title {
+  text-align: left;
+}
+.cid-sNKAhcIZpv .item-subtitle {
+  text-align: left;
+}
+.cid-sNOmPJsv8l {
+  padding-top: 1rem;
+  padding-bottom: 0rem;
+  background-color: #ffffff;
+}
+.cid-sNOmPJsv8l .row {
+  align-items: center;
+}
+@media (max-width: 991px) {
+  .cid-sNOmPJsv8l .image-wrapper {
+    padding: 1rem;
+  }
+}
+@media (min-width: 992px) {
+  .cid-sNOmPJsv8l .text-wrapper {
+    padding: 0 2rem;
+  }
+}
+.cid-sNOmPJsv8l .mbr-section-title {
+  text-align: left;
+  color: #d81b23;
+}
+.cid-sNOmPJsv8l .mbr-text,
+.cid-sNOmPJsv8l .mbr-section-btn {
+  text-align: left;
+  color: #000000;
 }
 .cid-sKlZaFlB50 {
   padding-top: 15px;
